// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetRepoSideBar renders correctly when user has no permissions 1`] = `
<div>
  <div
    class="AssetRepoSideBar-sideBar-2 sideBar"
  >
    <ul
      class="MuiList-root MuiList-padding AssetRepoSideBar-itemList-1 itemList css-h4y409-MuiList-root"
    >
      <div
        class="SideBarGroup-sidebarGroup-3"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 SideBarGroup-title-4 css-161uzub-MuiTypography-root"
        >
          Asset Repo
        </h6>
        <div
          icon="dashboard"
          label="Find Asset"
          to="/assets/find"
        >
          Find Asset
        </div>
      </div>
    </ul>
  </div>
</div>
`;

exports[`AssetRepoSideBar renders correctly when user is a Data Manager 1`] = `
<div>
  <div
    class="AssetRepoSideBar-sideBar-6 sideBar"
  >
    <ul
      class="MuiList-root MuiList-padding AssetRepoSideBar-itemList-5 itemList css-h4y409-MuiList-root"
    >
      <div
        class="SideBarGroup-sidebarGroup-7"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 SideBarGroup-title-8 css-161uzub-MuiTypography-root"
        >
          Asset Repo
        </h6>
        <div>
          <div
            icon="dashboard"
            label="Add Metadata"
            to="/assets/add-metadata"
          >
            Add Metadata
          </div>
        </div>
        <div
          icon="dashboard"
          label="Find Asset"
          to="/assets/find"
        >
          Find Asset
        </div>
      </div>
    </ul>
  </div>
</div>
`;
